# QtNetworkSocketServerClient

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
client/: CMakeLists.txt  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: DeployQt.cmake
server/: CMakeLists.txt  config.h.in  connectionhandler.cpp  connectionhandler.h  main.cpp  server.cpp  server.h  threadpool.cpp  threadpool.h
